E:41867 [!] Bug: Menu items were invisible in several cases. [*] Meta keywords description improvements.

--- a/src/skins/default/en/css/theme.css
+++ b/src/skins/default/en/css/theme.css
@@ -1041,7 +1041,6 @@ ul.account-links a:hover
 #main-menu
 {
   border-style: none;
-  height: 50px;
   padding: 0;
   margin: 0 0 13px;
   background: #589dce url(../images/top-menu.png) repeat-x top left;
